--- a/__site/sonora/index.html
+++ b/__site/sonora/index.html
@@ -42,6 +42,16 @@
 <!-- Content appended here -->
 <div class="franklin-content"><h1 id="new_sonora"><a href="#new_sonora" class="header-anchor">New Sonora</a></h1>
 <div class="marginnote"><img src="/img/sonora.png" style="width: 100%; display: block;"></div>
+
+<iframe 
+	src="https://njal.s3.us-west-2.amazonaws.com/Los%20Angeles.html" 
+	title="Los Angeles area map" 
+	width="800" 
+	height="600" 
+	frameborder="0" 
+	scrolling="yes">
+</iframe>
+
 <h3 id="growth"><a href="#growth" class="header-anchor">Growth</a></h3>
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
 <h3 id="manufacturing"><a href="#manufacturing" class="header-anchor">Manufacturing</a></h3>
