--- a/__site/dixie/index.html
+++ b/__site/dixie/index.html
@@ -42,6 +42,16 @@
 <!-- Content appended here -->
 <div class="franklin-content"><h1 id="new_dixie"><a href="#new_dixie" class="header-anchor">New Dixie</a></h1>
 <div class="marginnote"><img src="/img/dixie.png" style="width: 100%; display: block;"></div>
+
+<iframe 
+	src="https://njal.s3.us-west-2.amazonaws.com/Atlanta.html" 
+	title="Atlanta area map" 
+	width="800" 
+	height="600" 
+	frameborder="0" 
+	scrolling="yes">
+</iframe>
+
 <h2 id="population"><a href="#population" class="header-anchor">Population</a></h2>
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
 <h3 id="fertility"><a href="#fertility" class="header-anchor">Fertility</a></h3>
