Checkpoint save for population tables

--- a/__site/concord/index.html
+++ b/__site/concord/index.html
@@ -58,43 +58,37 @@
 <div class="marginnote">Source: American Community Survey, ACS 5-Year Estimates Detailed Tables 2023</div>
 
 <table class="tufte-table">
-		<thead>
-			<tr class = "header headerLastRow">
-				<th style = "text-align: left;">State</th>
-				<th style = "text-align: right;">Population</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td style = "background: gray; color: white; text-align: left;">Massachusetts</td>
-				<td style = "background: gray; color: white; text-align: right;">6,992,395</td>
-			</tr>
-			<tr>
-				<td style = "text-align: left;">Connecticut</td>
-				<td style = "text-align: right;">3,598,348</td>
-			</tr>
-			<tr>
-				<td style = "background: gray; color: white; text-align: left;">New Hampshire</td>
-				<td style = "background: gray; color: white; text-align: right;">1,387,834</td>
-			</tr>
-			<tr>
-				<td style = "text-align: left;">Maine</td>
-				<td style = "text-align: right;">1,377,400</td>
-			</tr>
-			<tr>
-				<td style = "background: gray; color: white; text-align: left;">Rhode Island</td>
-				<td style = "background: gray; color: white; text-align: right;">1,095,371</td>
-			</tr>
-			<tr>
-				<td style = "text-align: left;">Vermont</td>
-				<td style = "text-align: right;">645,254</td>
-			</tr>
-			<tr>
-				<td style = "font-weight: bold; text-align: left;">Total</td>
-				<td style = "font-weight: bold; text-align: right;">15,096,602</td>
-			</tr>
-		</tbody>
-	</table>
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">State</th>
+      <th style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">Dependency Ratio</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Massachusetts</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">6,992,395</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Connecticut</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">3,598,348</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">New Hampshire</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">1,387,834</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Maine</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">1,377,400</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Rhode Island</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">1,095,371</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Vermont</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">645,254</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">15,096,602</td>
+    </tr>
+  </tbody>
+</table>
+	
 
 <p>Its population is concentrated along the Northeast Corridor from Boston to New York. Massachusetts has a population size similar to Indiana and Tennessee. Connecticut falls between Utah and Oklahoma. Maine and New Hampshire are both comparable to Hawaii. Rhode Island has the approximate population of Delaware and Montana. Vermont has a larger population than Wyoming and a smaller population than the District of Columbia.</p>
 <p><img src="/img/concord_night.png" alt="Concordia at night" /></p>
@@ -107,35 +101,32 @@
 
 <table class="tufte-table">
   <thead>
-    <tr class = "header headerLastRow">
+    <tr class="tufte-table tr header headerLastRow">
       <th style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">State</th>
       <th style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">Dependency Ratio</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td style = "background: green; color: white; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Connecticut</td>
-      <td style = "background: green; color: white; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">52.88</td>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Massachusetts</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">6,992,395</td>
     </tr>
-    <tr>
-      <td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Maine</td>
-      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">58.14</td>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Connecticut</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">3,598,348</td>
     </tr>
-    <tr>
-      <td style = "background: green; color: white; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Massachusetts</td>
-      <td style = "background: green; color: white; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">50.23</td>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">New Hampshire</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">1,387,834</td>
     </tr>
-    <tr>
-      <td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">New Hampshire</td>
-      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">52.66</td>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Maine</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">1,377,400</td>
     </tr>
-    <tr>
-      <td style = "background: green; color: white; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Rhode Island</td>
-      <td style = "background: green; color: white; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">51.07</td>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Rhode Island</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">1,095,371</td>
     </tr>
-    <tr>
-      <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Vermont</td>
-      <td style = "font-weight: bold; max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">55.07</td>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Vermont</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">645,254</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">15,096,602</td>
     </tr>
   </tbody>
 </table>
@@ -168,7 +159,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 01, 2025.
+     Richard Careaga. Last modified: March 02, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
