Two population tables finished

--- a/__site/factor/index.html
+++ b/__site/factor/index.html
@@ -57,48 +57,74 @@
 <div class="marginnote">Source: American Community Survey, ACS 5-Year Estimates Detailed Tables 2023</div>
 
 <table class="tufte-table">
-	<thead>
-		<tr class = "header headerLastRow">
-			<th style = "text-align: left;">State</th>
-			<th style = "text-align: right;">Population</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td style = "background: gray; color: white; text-align: left;">Pennsylvania</td>
-			<td style = "background: gray; color: white; text-align: right;">12,986,518</td>
-		</tr>
-		<tr>
-			<td style = "text-align: left;">Illinois</td>
-			<td style = "text-align: right;">12,692,653</td>
-		</tr>
-		<tr>
-			<td style = "background: gray; color: white; text-align: left;">Ohio</td>
-			<td style = "background: gray; color: white; text-align: right;">11,780,046</td>
-		</tr>
-		<tr>
-			<td style = "text-align: left;">Michigan</td>
-			<td style = "text-align: right;">10,051,595</td>
-		</tr>
-		<tr>
-			<td style = "background: gray; color: white; text-align: left;">Indiana</td>
-			<td style = "background: gray; color: white; text-align: right;">6,811,752</td>
-		</tr>
-		<tr>
-			<td style = "text-align: left;">Wisconsin</td>
-			<td style = "text-align: right;">5,892,023</td>
-		</tr>
-		<tr>
-			<td style = "font-weight: bold; text-align: left;">Total</td>
-			<td style = "font-weight: bold; text-align: right;">60,214,587</td>
-		</tr>
-	</tbody>
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">State</th>
+      <th style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">Dependency Ratio</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Pennsylvania</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">12,986,518</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Illinois</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">12,692,653</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Ohio</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">11,780,046</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Michigan</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">10,051,595</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Indiana</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">6,811,752</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Wisconsin</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">5,892,023</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">60,214,587</td>
+    </tr>
+  </tbody>
 </table>
+	
 
 <p>Its combined population would make it the largest state in the existing union. Pennsylvania, Illinois and Ohio are already the fifth, sixth, seventh and eighth largest states. </p>
 <p><img src="/img/factoria_at_night.png" alt="Factoria at night" /></p>
 <p>Its closest global peer nation in terms of population is Italy. </p>
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
+
+<table class="tufte-table">
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">State</th>
+      <th style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">Dependency Ratio</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Pennsylvania</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">56.17</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Ohio</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">56.42</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Michigan</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">55.52</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Indiana</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">55.42</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Illinois</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">53.05</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Wisconsin</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">55.56</td>
+    </tr>
+  </tbody>
+</table>
+	
+
+<p>A lower dependency ratio indicates a higher proportion of the population in the 16-65 age group. For the US as a whole, the ratio is 52.86.</p>
 <h3 id="fertility"><a href="#fertility" class="header-anchor">Fertility</a></h3>
 <h3 id="growth"><a href="#growth" class="header-anchor">Growth</a></h3>
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
@@ -115,7 +141,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: February 28, 2025.
+     Richard Careaga. Last modified: March 02, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
