--- a/__site/cumber/index.html
+++ b/__site/cumber/index.html
@@ -57,35 +57,55 @@
 <div class="marginnote">Source: American Community Survey, ACS 5-Year Estimates Detailed Tables 2023</div>
 
 <table class="tufte-table">
-		<thead>
-			<tr class = "header headerLastRow">
-				<th style = "text-align: left;">State</th>
-				<th style = "text-align: right;">Population</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td style = "background: gray; color: white; text-align: left;">Tennessee</td>
-				<td style = "background: gray; color: white; text-align: right;">6,986,082</td>
-			</tr>
-			<tr>
-				<td style = "text-align: left;">Kentucky</td>
-				<td style = "text-align: right;">4,510,725</td>
-			</tr>
-			<tr>
-				<td style = "background: gray; color: white; text-align: left;">West Virginia</td>
-				<td style = "background: gray; color: white; text-align: right;">1,784,462</td>
-			</tr>
-			<tr>
-				<td style = "font-weight: bold; text-align: left;">Total</td>
-				<td style = "font-weight: bold; text-align: right;">13,281,269</td>
-			</tr>
-		</tbody>
-	</table>
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">State</th>
+      <th style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">Dependency Ratio</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Tennessee</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">6,986,082</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Kentucky</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">4,510,725</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">West Virginia</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">1,784,462</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">13,281,269</td>
+    </tr>
+  </tbody>
+</table>
+	
 
 <p>Tennessee has a population comparable to Massachusetts, and Kentucky has a population size between Louisiana and Oregon. to Indiana and Tennessee. West Virginia falls between Idaho and Oklahoma. A single state it would be the fifth largest behind New York and ahead of Pennsylvania. <img src="/img/cumber_at_night.png" alt="Cumberland at night" /></p>
 <p>Its closest global peer nation in terms of population is Burundi. </p>
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
+
+<table class="tufte-table">
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">State</th>
+      <th style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">Dependency Ratio</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">West Virginia</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">59.13</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Kentucky</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">55.64</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Tennessee</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">54.28</td>
+    </tr>
+  </tbody>
+</table>
+	
+
+<p>A lower dependency ratio indicates a higher proportion of the population in the 16-65 age group. For the US as a whole, the ratio is 52.86.</p>
 <h3 id="fertility"><a href="#fertility" class="header-anchor">Fertility</a></h3>
 <h3 id="growth"><a href="#growth" class="header-anchor">Growth</a></h3>
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
@@ -102,7 +122,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: February 28, 2025.
+     Richard Careaga. Last modified: March 02, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
