--- a/__site/dixie/index.html
+++ b/__site/dixie/index.html
@@ -56,48 +56,74 @@
 <div class="marginnote">Source: American Community Survey, ACS 5-Year Estimates Detailed Tables 2023</div>
 
 <table class="tufte-table">
-	<thead>
-		<tr class = "header headerLastRow">
-			<th style = "text-align: left;">State</th>
-			<th style = "text-align: right;">Population</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td style = "background: gray; color: white; text-align: left;">Florida</td>
-			<td style = "background: gray; color: white; text-align: right;">21,928,881</td>
-		</tr>
-		<tr>
-			<td style = "text-align: left;">Georgia</td>
-			<td style = "text-align: right;">10,822,590</td>
-		</tr>
-		<tr>
-			<td style = "background: gray; color: white; text-align: left;">North Carolina</td>
-			<td style = "background: gray; color: white; text-align: right;">10,584,340</td>
-		</tr>
-		<tr>
-			<td style = "text-align: left;">South Carolina</td>
-			<td style = "text-align: right;">5,212,774</td>
-		</tr>
-		<tr>
-			<td style = "background: gray; color: white; text-align: left;">Alabama</td>
-			<td style = "background: gray; color: white; text-align: right;">5,054,253</td>
-		</tr>
-		<tr>
-			<td style = "text-align: left;">Mississippi</td>
-			<td style = "text-align: right;">2,951,438</td>
-		</tr>
-		<tr>
-			<td style = "font-weight: bold; text-align: left;">Total</td>
-			<td style = "font-weight: bold; text-align: right;">56,554,276</td>
-		</tr>
-	</tbody>
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">State</th>
+      <th style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">Dependency Ratio</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Florida</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">21,928,881</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Georgia</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">10,822,590</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">North Carolina</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">10,584,340</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">South Carolina</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">5,212,774</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Alabama</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">5,054,253</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Mississippi</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">2,951,438</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Total</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">56,554,276</td>
+    </tr>
+  </tbody>
 </table>
+	
 
 <p>As a single state, it would be the largest by far with a population nearly more than twice that of California. Florida is already the third largest state, while Georgia and North Carolina rank seventh and eighth.</p>
 <p><img src="/img/dixie_at_night.png" alt="New Dixie at night" /></p>
 <p>Its closest global peer nation in terms of population is Kenya, and it is nearly the size of Italy.</p>
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
+
+<table class="tufte-table">
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">State</th>
+      <th style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">Dependency Ratio</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">North Carolina</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">53.64</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">South Carolina</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">56.93</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Florida</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">59.43</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Georgia</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">51.16</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Mississippi</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">56.23</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Alabama</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">55.99</td>
+    </tr>
+  </tbody>
+</table>
+	
+
+<p>A lower dependency ratio indicates a higher proportion of the population in the 16-65 age group. For the US as a whole, the ratio is 52.86.</p>
 <h3 id="fertility"><a href="#fertility" class="header-anchor">Fertility</a></h3>
 <h3 id="growth"><a href="#growth" class="header-anchor">Growth</a></h3>
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
@@ -114,7 +140,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: February 28, 2025.
+     Richard Careaga. Last modified: March 02, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
