--- a/__site/heart/index.html
+++ b/__site/heart/index.html
@@ -56,53 +56,48 @@
 <h2 id="population"><a href="#population" class="header-anchor">Population</a></h2>
 <div class="marginnote">Source: American Community Survey, ACS 5-Year Estimates Detailed Tables 2023</div>
 
-<table class="tufte-table">
-	<thead>
-	<tr class = "header headerLastRow">
-		<th style = "text-align: left;">State</th>
-		<th style = "text-align: right;">Population</th>
-	</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td style = "background: gray; color: white; text-align: left;">Missouri</td>
-			<td style = "background: gray; color: white; text-align: right;">6,168,181</td>
-		</tr>
-		<tr>
-			<td style = "text-align: left;">Minnesota</td>
-			<td style = "text-align: right;">5,713,716</td>
-		</tr>
-		<tr>
-			<td style = "background: gray; color: white; text-align: left;">Iowa</td>
-			<td style = "background: gray; color: white; text-align: right;">3,195,937</td>
-		</tr>
-		<tr>
-			<td style = "text-align: left;">Kansas</td>
-			<td style = "text-align: right;">2,937,569</td>
-		</tr>
-		<tr>
-			<td style = "background: gray; color: white; text-align: left;">Nebraska</td>
-			<td style = "background: gray; color: white; text-align: right;">1,965,926</td>
-		</tr>
-		<tr>
-			<td style = "text-align: left;">South Dakota</td>
-			<td style = "text-align: right;">899,194</td>
-		</tr>
-		<tr>
-			<td style = "background: gray; color: white; text-align: left;">North Dakota</td>
-			<td style = "background: gray; color: white; text-align: right;">779,361</td>
-		</tr>
-		<tr>
-			<td style = "font-weight: bold; text-align: left;">Total</td>
-			<td style = "font-weight: bold; text-align: right;">21,659,884</td>
-		</tr>
-	</tbody>
-</table>
+	
 
 <p>Its largest state, Missouri, has a population between Wisconsin and Maryland, and its smallest state, North Dakota, has a size between Alaska and South Dakota. As a single state, it would rank just behind Florida, displacing New York from the fourth place.</p>
 <p><img src="/img/heartland_at_night.png" alt="Heartlandia at night" /></p>
 <p>Its closest global peer nation in terms of population is Malawi. It is slightly smaller than Taiwan.</p>
 <h3 id="age_structure"><a href="#age_structure" class="header-anchor">Age Structure</a></h3>
+
+
+<table class="tufte-table">
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">State</th>
+      <th style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">Dependency Ratio</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Minnesota</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">55.89</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Iowa</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">58.15</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Nebraska</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">58.19</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">North Dakota</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">56.67</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">South Dakota</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">61.03</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Kansas</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">57.07</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "max-width: 50; overflow: hidden; text-align: left; text-overflow: ellipsis; white-space: nowrap;">Missouri</td>
+      <td style = "max-width: 50; overflow: hidden; text-align: right; text-overflow: ellipsis; white-space: nowrap;">56.26</td>
+    </tr>
+  </tbody>
+</table>
+	
+
+<p>A lower dependency ratio indicates a higher proportion of the population in the 16-65 age group. For the US as a whole, the ratio is 52.86.</p>
 <h3 id="fertility"><a href="#fertility" class="header-anchor">Fertility</a></h3>
 <h3 id="growth"><a href="#growth" class="header-anchor">Growth</a></h3>
 <h2 id="economy"><a href="#economy" class="header-anchor">Economy</a></h2>
@@ -119,7 +114,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: February 28, 2025.
+     Richard Careaga. Last modified: March 02, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
